<resources>
    <string name="app_name">指音</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_about">关于指音</string>
    <string name="menu_play">模拟演奏</string>
    <string name="menu_person">个人中心</string>
    <string name="menu_detect_play">手势演奏</string>
    <string name="drawer_open">抽屉打开</string>
    <string name="drawer_close">关闭</string>
    <string name="numberedMusicalNotation">简谱：</string>
    <string name="annotation">注：\n数字前的“+”表示高音；\n数字后的“-”表示低音。</string>
    <string name="quit">退\t出</string>
    <string name="returnText">返\t回</string>
    <string name="drawMusicNoteByHand">手动绘谱</string>

    <string name="localMusicScore">本地乐谱</string>
    <string name="cloudMusicScore">云端乐谱</string>

    <string name="musicScoreList">乐谱列表</string>
    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_phone_default">输入手机号</string>
    <string name="register_check_num_default">输入验证码</string>
    <string name="register_get_check_num">获取验证码</string>
    <string name="register_upass_default">需组合数字、字母或符号</string>
    <string name="register_info">我已看过并同意指音《用户使用协议》</string>


    <!--
    界面上的功能按钮
-->
    <string name="readMusicButton">听曲绘谱</string>
    <string name="saveButton">保存</string>
    <string name="importButton">导入</string>
    <string name="playMusicButton">播放</string>
    <string name="localPreservation">本地保存</string>
    <string name="uploadCloud">上传</string>


    <!--
        乐谱基本信息
    -->
    <string name="musicScoreNameEditText">乐谱名</string>
    <string name="keynoteTextView">1=</string>
    <string name="authorEditText">作者</string>


    <!--
        听音绘谱控制区域界面文本
    -->
    <string name="beginButtonInReadMusicControl">开始</string>
    <string name="endButtonInReadMusicControl">结束</string>
    <string name="finishButtonInReadMusicControl">完成</string>

    <!--
        当点击音符时，出现的修正选项菜单
    -->
    <string name="riseToneMenuItem">升调</string>
    <string name="fallToneMenuItem">降调</string>
    <string name="pauseToneMenuItem">休止</string>
    <string name="deleteToneMenuItem">删除</string>
    <string name="addToneMenuItem">添加</string>
    <string name="changeToneMenuItem">修改</string>
    <!--
        乐谱大调，需要补充
    -->
    <string-array name="majorIndex">
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>A</item>
        <item>B</item>
    </string-array>

    <!--
        拍号
        如2/4 拍子中的"2"表示每小节两拍，"4"表示以四分音符为一拍，
        即，2/4 即表示以四分音符为一拍，每小节有两拍。
    -->
    <string-array name="timeSignature">
        <item>4/4</item>
        <item>3/4</item>
        <item>2/4</item>
        <item>1/4</item>
    </string-array>

    <!--
        每分钟的节拍数
        标识每节拍的时长
    -->
    <string-array name="barsPerMin">
        <item>60</item>
        <item>30</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
    </string-array>


    <string name="title">LittlePiano</string>
    <string name="happybirthday">生日快乐\n556517 556521  5553176 443121</string>
    <string name="stars">小星星 \n1155665 4433221 5544332 5544332 1155665 4433221</string>
    <string name="twotigers">两只老虎\n1231 1231 345 345 565431 565431 35\-1 35\-1</string>
    <string name="ding">铃儿响叮当\n333 333 35123 4444 4333 32212 5 333 333 35123 4444 4333 55421</string>
    <string name="mom">世上只有妈妈好\n6535+1 65 6 356532 16\- 53 2 223556 32 1 53 21 6\-1 5\-</string>
    <string name="brush">我是一个粉刷匠\n5353531 24325 5353531 24321 2244315 24325 5353531 24321</string>
    <string name="schooling">上学歌\n12315 66+165 66+1563 653531231</string>
    <string name="title_activity_local_music_score">LocalMusicScoreActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
