<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--将这一块功能移到设置里面-->
<!--    <LinearLayout
        android:id="@+id/menuInReadMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/saveButton"
            android:id="@+id/saveButtonInReadMusic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/importButton"
            android:id="@+id/importButtonInReadMusic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/playMusicButtonInReadMusic"
            android:text="@string/playMusicButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>-->
    <RelativeLayout
        android:id="@+id/musicScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <RelativeLayout
            android:id="@+id/headOfMusicScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:background="@null"
                android:id="@+id/musicScoreNameEditText"
                android:text="@string/musicScoreNameEditText"
                android:layout_centerHorizontal="true"
                android:maxLines="1"
                android:maxLength="20"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/musicScoreInfoLayout"
                android:layout_below="@id/musicScoreNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/keynoteTextView"
                    android:text="@string/keynoteTextView"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/majorSpinner"
                    android:layout_toRightOf="@id/keynoteTextView"
                    android:entries="@array/majorIndex"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

                <Spinner
                    android:id="@+id/timeSignatureSpinner"
                    android:layout_toRightOf="@id/majorSpinner"
                    android:entries="@array/timeSignature"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>

                <Spinner
                    android:id="@+id/barsSpinner"
                    android:background="@android:color/transparent"
                    android:entries="@array/barsPerMin"
                    android:layout_toRightOf="@id/timeSignatureSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

                <EditText
                    android:id="@+id/authorEditText"
                    android:layout_alignParentRight="true"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/authorEditText" />

            </RelativeLayout>

        </RelativeLayout>

        <GridView
            android:layout_below="@id/headOfMusicScoreLayout"
            android:id="@+id/musicNoteLayoutGridView"
            android:numColumns="35"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </GridView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/operateAreaRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableLayout
            android:id="@+id/keyBoardLayout"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/doImageView"
                    android:src="@mipmap/do4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/rdoImageView"
                    android:src="@mipmap/rdo4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/reImageView"
                    android:src="@mipmap/re4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/rreImageView"
                    android:src="@mipmap/rre4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/miImageView"
                    android:src="@mipmap/mi4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/faImageView"
                    android:src="@mipmap/fa4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/rfaImageView"
                    android:src="@mipmap/rfa4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/solImageView"
                    android:src="@mipmap/sol4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/rsolImageView"
                    android:src="@mipmap/rsol4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/laImageView"
                    android:src="@mipmap/la4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/rlaImageView"
                    android:src="@mipmap/rla4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/siImageView"
                    android:src="@mipmap/si4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/readMusicOperateAreaLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">
            <LinearLayout
                android:id="@+id/readMusicControlLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/beginButtonInReadMusicControl"
                    android:text="@string/beginButtonInReadMusicControl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/endButtonInReadMusicControl"
                    android:text="@string/endButtonInReadMusicControl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/finishButtonInReadMusicControl"
                    android:text="@string/finishButtonInReadMusicControl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
